--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
     "@types/react": "^18.0.12",
     "@types/react-dom": "^18.0.5",
     "axios": "^0.27.2",
+    "rc-pagination": "^3.1.16",
+    "rc-table": "^7.24.2",
     "react": "^18.1.0",
     "react-dom": "^18.1.0",
     "react-hook-form": "^7.32.0",
