--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "rc-pagination": "^3.1.16",
     "rc-table": "^7.24.2",
     "react": "^18.1.0",
+    "react-data-table-component": "^7.5.2",
     "react-dom": "^18.1.0",
     "react-hook-form": "^7.32.0",
     "react-redux": "^8.0.2",
