--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@types/react": "^18.0.12",
     "@types/react-dom": "^18.0.5",
     "axios": "^0.27.2",
+    "lodash.debounce": "^4.0.8",
     "react": "^18.1.0",
     "react-data-table-component": "^7.5.2",
     "react-datepicker": "^4.8.0",
